Add copyright to JNs (#132)
* Add copyright to Leap JNs

* Add copyright to Diverse Solutions HTML

* Add copyright to 2000Q except Bayes

* Add copyright to PML JNs

* Fix classical_boltzmann_sampler version--review from @vgoliber

--- a/01-diverse-solutions.html
+++ b/01-diverse-solutions.html
@@ -14765,6 +14765,7 @@ For readout_thermalization=100 and QPU time 273063, autocorrelation is 0.494
 <p>Typically, for longer <code>readout_thermalization</code> settings, solutions have lower autocorrelation.</p>
 <p>Try experimenting with the methods demonstrated in this notebook. There are additional methods to improve solutions and best practices you should be familiar with. For more detailed information on posing problems and improving solutions, see  the <a href="https://docs.dwavesys.com/docs/latest/doc_handbook.html">D-Wave Problem-Solving Handbook</a>.</p>
 <p>For an example of improved performance on the lower-noise QPU, see the whitepaper <a href="https://www.dwavesys.com/sites/default/files/14-1037A-A_Improved_coherence_leads_to_gains_QA_performance.pdf">Improved coherence leads to gains in quantum annealing performance</a>.</p>
+<p>Copyright &copy; D-Wave Systems Inc.</p>
 
 </div>
 </div>
